--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "react-scripts": "^5.0.1"
-  }
+  },
+
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "name": "Chic-Brasil",
+  "version": "0.1.0",
+  "private": true
 }
