--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1"
   },
 
@@ -9,7 +11,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "name": "Chic-Brasil",
+  "name": "chic-brasil",
   "version": "0.1.0",
   "private": true
 }
